--- a/index.html
+++ b/index.html
@@ -7,50 +7,110 @@
   <title>PokéROOM's</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-
-        
-
-    </style>
-
 </head>
 
 <body>
 
-<div class="navbar navbar-dark bg-danger shadow-sm">
-  <div class="container">
-      <img src="./images/PokéROOM's_Logo.png" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
-      aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="navbar navbar-dark bg-danger shadow-sm">
+    <div class="container">
+      <img class="img__logo" src="./images/PokéROOM's_Logo.png" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+        aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
   </div>
-</div>
 
-<!-- ✅ Aqui está o conteúdo que abre e fecha -->
-<div class="collapse bg-dark" id="navbarHeader">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8 col-md-7 py-4">
-        <h4 class="text-white">About</h4>
-        <p class="text-white">Add some information about the album below, the author, or any other background context.</p>
-      </div>
-      <div class="col-sm-4 offset-md-1 py-4">
-        <h4 class="text-white">Contact</h4>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-white">Follow on X</a></li>
-          <li><a href="#" class="text-white">Like on Facebook</a></li>
-          <li><a href="#" class="text-white">Email me</a></li>
-        </ul>
+  <!-- conteúdo que abre e fecha -->
+  <div class="collapse bg-dark" id="navbarHeader">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 offset-md-1 py-4">
+          <h4 class="collapse__title">Navegação</h4>
+          <ul class="list-unstyled bootstrap__list">
+            <li><a href="#" class="collapse__itemList">Emuladores</a></li>
+            <li><a href="#" class="collapse__itemList">ROOM's</a></li>
+            <li><a href="#" class="collapse__itemList">Sobre</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-  crossorigin="anonymous"></script>
+  <!-- Carossel -->
+  <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./images/capa 1 V2.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <main class="apresentacao">
+    <p class="apresentacao__text">O PokéROOM's é um site com o objetivo de manter vivos os jogos da franquia principal
+      de Pokémon, permitindo que novos fãs possam se aventurar em jornadas que já não estão mais disponíveis.</p>
+  </main>
+
+  <section class="geracoes">
+
+    <h2 class="geracoes__title">Gerações</h2>
+
+    <div class="container__geracoes">
+
+      <a href="#"><img src="./images_geracoes/gen 1.png" alt="geração 1"></a>
+
+      <a href="#"><img src="./images_geracoes/gen 2.png" alt="geração 2"></a>
+
+      <a href="#"><img src="./images_geracoes/gen 3.png" alt="geração 3"></a>
+
+      <a href="#"><img src="./images_geracoes/gen 4 e 5.png" alt="geração 4 e 5"></a>
+
+      <a href="#"><img src="./images_geracoes/gen 6 e 7.png" alt="geração 6 e 7"></a>
+
+    </div>
+
+  </section>
+
+  <footer>
+
+    <a href="#"><img src="./images/PokéROOM's_Logo.png" alt="Logo Pokémon ROOM's"></a>
+
+    <ul class="footer__navegation">
+      <li><a href="#">Emuladores</a></li>
+      <li><a href="#">ROOM's</a></li>
+      <li><a href="#">Sobre</a></li>
+    </ul>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
 
 </body>
 
