--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./images/capa 1 V2.png" class="d-block w-100" alt="...">
+        <a href="#"><img src="./images__carossel/capa 1 V2.png" class="d-block w-100" alt="Mantendo a jornada viva!"></a>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <a href="#"><img src="./images__carossel/emuladores carossel.png" class="d-block w-100" alt="Emuladores"></a>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <a href="#"><img src="./images__carossel/jogos carossel mobile.png" class="d-block w-100" alt="jogos Pokémon"></a>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -82,15 +82,15 @@
 
     <div class="container__geracoes">
 
-      <a href="#"><img src="./images_geracoes/gen 1.png" alt="geração 1"></a>
+      <a href="#"><img src="./images__geracoes/gen 1.png" alt="geração 1"></a>
 
-      <a href="#"><img src="./images_geracoes/gen 2.png" alt="geração 2"></a>
+      <a href="#"><img src="./images__geracoes/gen 2.png" alt="geração 2"></a>
 
-      <a href="#"><img src="./images_geracoes/gen 3.png" alt="geração 3"></a>
+      <a href="#"><img src="./images__geracoes/gen 3.png" alt="geração 3"></a>
 
-      <a href="#"><img src="./images_geracoes/gen 4 e 5.png" alt="geração 4 e 5"></a>
+      <a href="#"><img src="./images__geracoes/gen 4 e 5.png" alt="geração 4 e 5"></a>
 
-      <a href="#"><img src="./images_geracoes/gen 6 e 7.png" alt="geração 6 e 7"></a>
+      <a href="#"><img src="./images__geracoes/gen 6 e 7.png" alt="geração 6 e 7"></a>
 
     </div>
 
