logo link ancora

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="navbar navbar-dark bg-danger shadow-sm">
     <div class="container">
-      <img class="img__logo" src="./images/PokéROOM's_Logo.png" alt="">
+      <a href="./index.html"><img class="img__logo" src="./images/PokéROOM's_Logo.png" alt=""></a>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
         aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
