--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="col-sm-4 offset-md-1 py-4">
           <ul class="list-unstyled bootstrap__list">
-            <li><a href="#" class="collapse__itemList">Emuladores</a></li>
+            <li><a href="./pages_navegation/emuladores.html" class="collapse__itemList">Emuladores</a></li>
             <li><a href="#" class="collapse__itemList">ROOM's</a></li>
             <li><a href="#" class="collapse__itemList">Sobre</a></li>
           </ul>
@@ -50,10 +50,10 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a href="#"><img src="./images__carossel/capa 1 V2.png" class="d-block w-100" alt="Mantendo a jornada viva!"></a>
+        <a href="./index.html"><img src="./images__carossel/capa 1 V2.png" class="d-block w-100" alt="Mantendo a jornada viva!"></a>
       </div>
       <div class="carousel-item">
-        <a href="#"><img src="./images__carossel/emuladores carossel.png" class="d-block w-100" alt="Emuladores"></a>
+        <a href="./pages_navegation/emuladores.html"><img src="./images__carossel/emuladores carossel.png" class="d-block w-100" alt="Emuladores"></a>
       </div>
       <div class="carousel-item">
         <a href="#"><img src="./images__carossel/jogos carossel mobile.png" class="d-block w-100" alt="jogos Pokémon"></a>
@@ -101,7 +101,7 @@
     <a href="#"><img src="./images/PokéROOM's_Logo.png" alt="Logo Pokémon ROOM's"></a>
 
     <ul class="footer__navegation">
-      <li><a href="#">Emuladores</a></li>
+      <li><a href="./pages_navegation/emuladores.html">Emuladores</a></li>
       <li><a href="#">ROOM's</a></li>
       <li><a href="#">Sobre</a></li>
     </ul>
