--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -74,11 +74,11 @@
         </button>
     </div>
 
-    <section class="emuladores">
+    <section class="rooms">
 
-        <h2 class="emuladores__title">Emuladores</h2>
+        <h2 class="rooms__title">ROOM's</h2>
 
-        <div class="container__emuladores">
+        <div class="container__rooms">
 
             <a href="#"><img src="../images__emuladores/card__GB.png" alt="Game Boy"></a>
 
