roooms - mobile finalizado

--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -80,15 +80,33 @@
 
         <div class="container__rooms">
 
-            <a href="#"><img src="../images__emuladores/card__GB.png" alt="Game Boy"></a>
-
-            <a href="#"><img src="../images__emuladores/card__GBC.png" alt="Game Boy Color"></a>
-
-            <a href="#"><img src="../images__emuladores/card__GBA.png" alt="Game Boy Advance"></a>
-
-            <a href="#"><img src="../images__emuladores/card__NDS.png" alt="Nintendo DS"></a>
-
-            <a href="#"><img src="../images__emuladores/card__N3DS.png" alt="Nintendo 3DS"></a>
+            <a href="#"><img src="../images__rooms/pk__red.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__blue.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__green.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__yellow.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__gold.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__silver.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__crystal.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__ruby.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__sapphire.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__firered.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__leafgreen.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__emerald.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__diamond.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__pearl.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__platinum.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__heartgold.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__soulsilver.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__black.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__white.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__black2.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__white2.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__x.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__y.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__omegaruby.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__alphasapphira.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__sun.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__moon.png" alt=""></a>
 
         </div>
 
