--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -58,7 +58,7 @@
                         alt="Emuladores"></a>
             </div>
             <div class="carousel-item">
-                <a href="#"><img src="../images__carossel/jogos carossel mobile.png" class="d-block w-100"
+                <a href="./sobre.html"><img src="../images__carossel/jogos carossel mobile.png" class="d-block w-100"
                         alt="jogos Pokémon"></a>
             </div>
         </div>
@@ -118,8 +118,8 @@
 
         <ul class="footer__navegation">
             <li><a href="./emuladores.html">Emuladores</a></li>
-            <li><a href="#">ROOM's</a></li>
-            <li><a href="#">Sobre</a></li>
+            <li><a href="./ROOM's.html">ROOM's</a></li>
+            <li><a href="./sobre.html">Sobre</a></li>
         </ul>
 
     </footer>
