--- a/pages_navegation/emuladores.html
+++ b/pages_navegation/emuladores.html
@@ -29,9 +29,9 @@
             <div class="row">
                 <div class="col-sm-4 offset-md-1 py-4">
                     <ul class="list-unstyled bootstrap__list">
-                        <li><a href="#" class="collapse__itemList">Emuladores</a></li>
-                        <li><a href="#" class="collapse__itemList">ROOM's</a></li>
-                        <li><a href="#" class="collapse__itemList">Sobre</a></li>
+                        <li><a href="./emuladores.html" class="collapse__itemList">Emuladores</a></li>
+                        <li><a href="./ROOM's.html" class="collapse__itemList">ROOM's</a></li>
+                        <li><a href="./sobre.html" class="collapse__itemList">Sobre</a></li>
                     </ul>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                         alt="Emuladores"></a>
             </div>
             <div class="carousel-item">
-                <a href="#"><img src="../images__carossel/jogos carossel mobile.png" class="d-block w-100"
+                <a href="./ROOM's.html"><img src="../images__carossel/jogos carossel mobile.png" class="d-block w-100"
                         alt="jogos Pokémon"></a>
             </div>
         </div>
@@ -100,8 +100,8 @@
 
         <ul class="footer__navegation">
             <li><a href="./emuladores.html">Emuladores</a></li>
-            <li><a href="#">ROOM's</a></li>
-            <li><a href="#">Sobre</a></li>
+            <li><a href="./ROOM's.html">ROOM's</a></li>
+            <li><a href="./sobre.html">Sobre</a></li>
         </ul>
 
     </footer>
