--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <ul class="list-unstyled bootstrap__list">
             <li><a href="./pages_navegation/emuladores.html" class="collapse__itemList">Emuladores</a></li>
-            <li><a href="#" class="collapse__itemList">ROOM's</a></li>
-            <li><a href="#" class="collapse__itemList">Sobre</a></li>
+            <li><a href="./pages_navegation/ROOM's.html" class="collapse__itemList">ROOM's</a></li>
+            <li><a href="./pages_navegation/sobre.html" class="collapse__itemList">Sobre</a></li>
           </ul>
         </div>
       </div>
@@ -56,7 +56,7 @@
         <a href="./pages_navegation/emuladores.html"><img src="./images__carossel/emuladores carossel.png" class="d-block w-100" alt="Emuladores"></a>
       </div>
       <div class="carousel-item">
-        <a href="#"><img src="./images__carossel/jogos carossel mobile.png" class="d-block w-100" alt="jogos Pokémon"></a>
+        <a href="./pages_navegation/ROOM's.html"><img src="./images__carossel/jogos carossel mobile.png" class="d-block w-100" alt="jogos Pokémon"></a>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -102,8 +102,8 @@
 
     <ul class="footer__navegation">
       <li><a href="./pages_navegation/emuladores.html">Emuladores</a></li>
-      <li><a href="#">ROOM's</a></li>
-      <li><a href="#">Sobre</a></li>
+      <li><a href="./pages_navegation/ROOM's.html">ROOM's</a></li>
+      <li><a href="./pages_navegation/sobre.html">Sobre</a></li>
     </ul>
 
   </footer>
