inserção pelo js finalizada

--- a/index.html
+++ b/index.html
@@ -79,7 +79,17 @@
 
   </section>
 
-  <footer></footer>
+  <footer>
+
+    <a href="./index.html"><img src="./images/PokéROOM's_Logo.png" alt="Logo Pokémon ROOM's"></a>
+
+    <ul class="footer__navegation">
+      <li><a href="./pages_navegation/emuladores.html">Emuladores</a></li>
+      <li><a href="./pages_navegation/ROOM's.html">ROOM's</a></li>
+      <li><a href="./pages_navegation/sobre.html">Sobre</a></li>
+    </ul>
+
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
