--- a/pages_navegation/emuladores.html
+++ b/pages_navegation/emuladores.html
@@ -16,7 +16,7 @@
     <div class="navbar navbar-dark bg-danger shadow-sm d-md-none"></div>
 
     <!-- conteúdo que abre e fecha -->
-    <div class="collapse bg-dark" id="navbarHeader d-md-none"></div>
+    <div class="collapse bg-dark d-md-none" id="navbarHeader"></div>
 
     <!-- Carossel -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel"></div>
@@ -43,12 +43,13 @@
 
     <footer></footer>
 
-    <script src="../js/navbar.js"></script>
-    <script src="../js/carossel.js"></script>
-    <script src="../js/footer.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+    <script src="../js/navbar.js"></script>
+    <script src="../js/carossel.js"></script>
+    <script src="../js/footer.js"></script>
 
 </body>
 
