--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>PokéROOM's</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" href="./images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
 </head>
 
 <body>
