base pages navegation pronta

--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 
 <body>
 
-  <nav></nav>
+  <nav>
+
+    <a href="./index.html"><img class="img__logo" src="./images/PokéROOM's_Logo.png"
+        alt=""></a>
+
+    <ul class="navbar__descktop__navegation_list">
+      <li><a href="./pages_navegation/emuladores.html"
+          class="navbar__descktop__navegation__list__item">Emuladores</a>
+      </li>
+      <li><a href="./pages_navegation/ROOM's.html"
+          class="navbar__descktop__navegation__list__item">ROOM's</a></li>
+      <li><a href="./pages_navegation/sobre.html"
+          class="navbar__descktop__navegation__list__item">Sobre</a></li>
+    </ul>
+
+  </nav>
 
   <div class="navbar navbar-dark bg-danger shadow-sm d-md-none"></div>
 
@@ -98,6 +113,7 @@
   <script src="./js/navbar.js"></script>
   <script src="./js/carossel.js"></script>
   <script src="./js/footer.js"></script>
+  <script src="./js/geracoes.js"></script>
 
 </body>
 
