--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -7,36 +7,17 @@
     <title>PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
 </head>
 
 <body>
 
+    <nav></nav>
 
-    <div class="navbar navbar-dark bg-danger shadow-sm">
-        <div class="container">
-            <a href="../index.html"><img class="img__logo" src="../images/PokéROOM's_Logo.png" alt=""></a>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
-                aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </div>
+    <div class="navbar navbar-dark bg-danger shadow-sm d-md-none"></div>
 
     <!-- conteúdo que abre e fecha -->
-    <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <ul class="list-unstyled bootstrap__list">
-                        <li><a href="./emuladores.html" class="collapse__itemList">Emuladores</a></li>
-                        <li><a href="./ROOM's.html" class="collapse__itemList">ROOM's</a></li>
-                        <li><a href="./sobre.html" class="collapse__itemList">Sobre</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="collapse bg-dark d-md-none" id="navbarHeader"></div>
 
     <!-- Carossel -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -127,6 +108,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+    <script src="../js/navbar.js"></script>
+    <script src="../js/carossel.js"></script>
+    <script src="../js/footer.js"></script>
 
 </body>
 
