teste img link gen1

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <div class="container__geracoes">
 
-      <a href="#"><img src="./images__geracoes/gen 1.png" alt="geração 1"></a>
+      <a href="./pages__geracoes/gen1.html"><img src="./images__geracoes/gen 1.png" alt="geração 1"></a>
 
       <a href="#"><img src="./images__geracoes/gen 2.png" alt="geração 2"></a>
 
