--- a/pages__geracoes/gen1.html
+++ b/pages__geracoes/gen1.html
@@ -7,7 +7,7 @@
     <title>PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
+    <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
 
     <section class="rooms">
 
-        <h2 class="rooms__title">ROOM's</h2>
+        <h2 class="rooms__title">1º Geração</h2>
 
         <div class="container__rooms">
 
@@ -65,29 +65,6 @@
             <a href="#"><img src="../images__rooms/pk__blue.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__green.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__yellow.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__gold.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__silver.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__crystal.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__ruby.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__sapphire.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__firered.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__leafgreen.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__emerald.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__diamond.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__pearl.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__platinum.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__heartgold.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__soulsilver.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__black.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__white.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__black2.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__white2.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__x.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__y.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__omegaruby.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__alphasapphira.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__sun.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__moon.png" alt=""></a>
 
         </div>
 
@@ -104,4 +81,4 @@
 
 </body>
 
-</html>
+</html> bv
