--- a/pages_navegation/sobre.html
+++ b/pages_navegation/sobre.html
@@ -35,17 +35,7 @@
 
     </main>
 
-    <footer>
-
-        <a href="../index.html"><img src="../images/PokéROOM's_Logo.png" alt="Logo Pokémon ROOM's"></a>
-
-        <ul class="footer__navegation">
-            <li><a href="./emuladores.html">Emuladores</a></li>
-            <li><a href="./ROOM's.html">ROOM's</a></li>
-            <li><a href="./sobre.html">Sobre</a></li>
-        </ul>
-
-    </footer>
+    <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
