--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 
       <a href="./pages__geracoes/gen1.html"><img src="./images__geracoes/gen 1.png" alt="geração 1"></a>
 
-      <a href="#"><img src="./images__geracoes/gen 2.png" alt="geração 2"></a>
+      <a href="./pages__geracoes/gen2.html"><img src="./images__geracoes/gen 2.png" alt="geração 2"></a>
 
-      <a href="#"><img src="./images__geracoes/gen 3.png" alt="geração 3"></a>
+      <a href="./pages__geracoes/gen3.html"><img src="./images__geracoes/gen 3.png" alt="geração 3"></a>
 
-      <a href="#"><img src="./images__geracoes/gen 4 e 5.png" alt="geração 4 e 5"></a>
+      <a href="./pages__geracoes/gen4e5.html"><img src="./images__geracoes/gen 4 e 5.png" alt="geração 4 e 5"></a>
 
-      <a href="#"><img src="./images__geracoes/gen 6 e 7.png" alt="geração 6 e 7"></a>
+      <a href="./pages__geracoes/gen6e7.html"><img src="./images__geracoes/gen 6 e 7.png" alt="geração 6 e 7"></a>
 
     </div>
 
