--- a/pages__geracoes/gen6e7.html
+++ b/pages__geracoes/gen6e7.html
@@ -57,7 +57,7 @@
 
     <section class="rooms">
 
-        <h2 class="rooms__title">1º Geração</h2>
+        <h2 class="rooms__title">6º e 7° Gerações</h2>
 
         <div class="container__rooms">
 
