--- a/index.html
+++ b/index.html
@@ -14,25 +14,41 @@
 
   <nav>
 
-    <a href="./index.html"><img class="img__logo" src="./images/PokéROOM's_Logo.png"
-        alt=""></a>
+    <a href="./index.html"><img class="img__logo" src="./images/PokéROOM's_Logo.png" alt=""></a>
 
     <ul class="navbar__descktop__navegation_list">
-      <li><a href="./pages_navegation/emuladores.html"
-          class="navbar__descktop__navegation__list__item">Emuladores</a>
+      <li><a href="./pages_navegation/emuladores.html" class="navbar__descktop__navegation__list__item">Emuladores</a>
       </li>
-      <li><a href="./pages_navegation/ROOM's.html"
-          class="navbar__descktop__navegation__list__item">ROOM's</a></li>
-      <li><a href="./pages_navegation/sobre.html"
-          class="navbar__descktop__navegation__list__item">Sobre</a></li>
+      <li><a href="./pages_navegation/ROOM's.html" class="navbar__descktop__navegation__list__item">ROOM's</a></li>
+      <li><a href="./pages_navegation/sobre.html" class="navbar__descktop__navegation__list__item">Sobre</a></li>
     </ul>
 
   </nav>
 
-  <div class="navbar navbar-dark bg-danger shadow-sm d-md-none"></div>
+  <div class="navbar navbar-dark bg-danger shadow-sm d-md-none">
+    <div class="container">
+      <a href="./index.html"><img class="img__logo" src="./images/PokéROOM's_Logo.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+        aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
 
   <!-- conteúdo que abre e fecha -->
-  <div class="collapse bg-dark d-md-none" id="navbarHeader"></div>
+  <div class="collapse bg-dark d-md-none" id="navbarHeader">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 offset-md-1 py-4">
+          <ul class="list-unstyled bootstrap__list">
+            <li><a href="../pages_navegation/emuladores.html" class="collapse__itemList">Emuladores</a></li>
+            <li><a href="./pages_navegation/ROOM's.html" class="collapse__itemList">ROOM's</a></li>
+            <li><a href="./pages_navegation/sobre.html" class="collapse__itemList">Sobre</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Carossel -->
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
