--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PokéROOM's</title>
+    <title>ROOM's - PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
