--- a/pages_navegation/emuladores.html
+++ b/pages_navegation/emuladores.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PokéROOM's</title>
+    <title>Emuladores - PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -28,7 +28,7 @@
 
         <div class="container__emuladores">
 
-            <a href="#"><img src="../images__emuladores/card__GB.png" alt="Game Boy"></a>
+            <a href="../pages__emuladores/gameboy.html"><img src="../images__emuladores/card__GB.png" alt="Game Boy"></a>
 
             <a href="#"><img src="../images__emuladores/card__GBC.png" alt="Game Boy Color"></a>
 
