teste page info Game Boy - mobile

--- a/pages__emuladores/gameboy.html
+++ b/pages__emuladores/gameboy.html
@@ -36,7 +36,7 @@
                 compatível com a maioria dos dispositivos.</p>
 
             <a href="https://mgba.io">
-                <p class="dowload__link__jogo">mBGA (descktop) <i class="ri-download-line"></i></p>
+                <p class="dowload__link__jogo">mBGA (descktop)<i class="ri-download-line"></i></p>
             </a>
             <a href="https://play.google.com/store/apps/details?id=gba.game.emulator.metaverse">
                 <p class="dowload__link__jogo">Gameboy Classic (mobiel) <i class="ri-download-line"></i></p>
@@ -53,10 +53,8 @@
         <div class="jogos__compativeis">
             <a href="#"><img src="../images__rooms/pk__red.png" alt="Pokémon Red" class="img__jogos__compativeis"></a>
             <a href="#"><img src="../images__rooms/pk__blue.png" alt="Pokémon Blue" class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__green.png" alt="Pokémon Green"
-                    class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__yellow.png" alt="Pokémon Yellow"
-                    class="img__jogos__compativeis"></a>
+            <a href="#"><img src="../images__rooms/pk__green.png" alt="Pokémon Green" class="img__jogos__compativeis"></a>
+            <a href="#"><img src="../images__rooms/pk__yellow.png" alt="Pokémon Yellow" class="img__jogos__compativeis"></a>
         </div>
 
     </section>
