--- a/pages__emuladores/gameboy.html
+++ b/pages__emuladores/gameboy.html
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__emuladores/card__GB.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../images__download/card GB.png" alt="Game Boy" class="container__jogo__img">
 
             <h1 class="container__jogo__titulo">Game Boy</h1>
 
