correção container emuladores

--- a/pages__emuladores/gameboy.html
+++ b/pages__emuladores/gameboy.html
@@ -19,7 +19,7 @@
     <!-- conteúdo que abre e fecha -->
     <div class="collapse bg-dark d-md-none" id="navbarHeader"></div>
 
-    <main class="container__emuladores">
+    <main class="container__emuladores__info">
 
         <div class="container__jogo">
 
