pages emuladores download quase pronto, faltam os jogos compativeis

--- a/pages_navegation/emuladores.html
+++ b/pages_navegation/emuladores.html
@@ -30,13 +30,13 @@
 
             <a href="../pages__emuladores/gameboy.html"><img src="../images__emuladores/card__GB.png" alt="Game Boy"></a>
 
-            <a href="#"><img src="../images__emuladores/card__GBC.png" alt="Game Boy Color"></a>
+            <a href="../pages__emuladores/gameboycolor.html"><img src="../images__emuladores/card__GBC.png" alt="Game Boy Color"></a>
 
-            <a href="#"><img src="../images__emuladores/card__GBA.png" alt="Game Boy Advance"></a>
+            <a href="../pages__emuladores/gameboyadvance.html"><img src="../images__emuladores/card__GBA.png" alt="Game Boy Advance"></a>
 
-            <a href="#"><img src="../images__emuladores/card__NDS.png" alt="Nintendo DS"></a>
+            <a href="../pages__emuladores/nintendods.html"><img src="../images__emuladores/card__NDS.png" alt="Nintendo DS"></a>
 
-            <a href="#"><img src="../images__emuladores/card__N3DS.png" alt="Nintendo 3DS"></a>
+            <a href="../pages__emuladores/nintendo3ds.html"><img src="../images__emuladores/card__N3DS.png" alt="Nintendo 3DS"></a>
 
         </div>
 
