--- a/pages__emuladores/gameboyadvance.html
+++ b/pages__emuladores/gameboyadvance.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Boy - PokéROOM's</title>
+    <title>Game Boy Advance - PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,15 +23,15 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__emuladores/card GB.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../images__download__emuladores/card GBA.png" alt="Game Boy" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Emulador de Game Boy
-                Jogue clássicos do Game Boy diretamente do seu computador ou celular! Com este emulador, você pode
+            <p class="info__jogo">Emulador de Game Boy Advance
+                Jogue clássicos do Game Boy Advance diretamente do seu computador ou celular! Com este emulador, você pode
                 reviver aventuras icônicas como os jogos da série Pokémon. Rápido, prático e
                 compatível com a maioria dos dispositivos.</p>
 
@@ -51,10 +51,11 @@
         <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
 
         <div class="jogos__compativeis">
-            <a href="#"><img src="../images__rooms/pk__red.png" alt="Pokémon Red" class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__blue.png" alt="Pokémon Blue" class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__green.png" alt="Pokémon Green" class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__yellow.png" alt="Pokémon Yellow" class="img__jogos__compativeis"></a>
+            <a href="#"><img src="../images__rooms/pk__ruby.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__sapphire.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__firered.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__leafgreen.png" alt=""></a>
+            <a href="#"><img src="../images__rooms/pk__emerald.png" alt=""></a>
         </div>
 
     </section>
