--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -61,7 +61,7 @@
 
         <div class="container__rooms">
 
-            <a href="#"><img src="../images__rooms/pk__red.png" alt=""></a>
+            <a href="../pages__rooms/pk__red.html"><img src="../images__rooms/pk__red.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__blue.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__green.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__yellow.png" alt=""></a>
