gen 1 finalizada - faltando apenas download

--- a/pages__rooms/pk__green.html
+++ b/pages__rooms/pk__green.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon Red - PokéROOM's</title>
+    <title>Pokémon Green - PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__rooms/pk__red.png" alt="Pokémon Red" class="container__jogo__img">
+            <img src="../images__download__rooms/pk__green.png" alt="Pokémon Red" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
@@ -31,21 +31,30 @@
 
         <div class="container__info__jogo">
             <p class="info__jogo">
-                Pokémon Red é o jogo que deu início à icônica franquia Pokémon. Lançado originalmente para o Game Boy,
-                ele convida os jogadores a explorarem a região de Kanto em uma jornada para se tornarem Mestres Pokémon.
-                Capture e treine mais de 100 criaturas diferentes, enfrente líderes de ginásio, derrote a temida Equipe
-                Rocket e desafie a Elite dos Quatro.
+                Pokémon Green Version é o título que deu início à lendária franquia Pokémon no Japão, lançado
+                originalmente em 1996 para o Game Boy. Esta versão é considerada a gênese da série, apresentando pela
+                primeira vez aos jogadores o mundo de Kanto e os 151 Pokémon originais.
 
-                Com um estilo visual clássico em 8 bits e mecânicas que definiram toda a série, Pokémon Red oferece
-                nostalgia e desafio na medida certa — perfeito para fãs antigos e novos treinadores.
+                Em Pokémon Green, os jogadores embarcam em uma jornada clássica: escolher um dos três Pokémon iniciais —
+                Bulbasaur, Charmander ou Squirtle — e partir para uma aventura épica repleta de batalhas estratégicas,
+                encontros com Pokémon selvagens, e a missão de se tornar o Campeão da Liga Pokémon. O jogo introduz
+                mecânicas fundamentais como o sistema de tipos, evoluções e batalhas por turnos.
+
+                Diferente das versões Red e Blue lançadas posteriormente no Ocidente, Pokémon Green possui sprites e
+                gráficos originais, que oferecem uma estética única e nostálgica para colecionadores e fãs dedicados.
+                Além disso, a troca de Pokémon entre as versões Green e Red é essencial para completar a Pokédex,
+                promovendo a interação entre jogadores.
+
+                Com uma trilha sonora marcante, gráficos icônicos de 8 bits e uma jogabilidade que revolucionou o gênero
+                RPG, Pokémon Green permanece como um dos lançamentos mais importantes da história dos videogames.
             </p>
 
             <a href="#">
-                <p class="dowload__link__jogo">Pokémon Red - BR<i class="ri-download-line"></i></p>
+                <p class="dowload__link__jogo">Pokémon Green - BR<i class="ri-download-line"></i></p>
             </a>
 
             <a href="#">
-                <p class="dowload__link__jogo">Pokémon Red - USA<i class="ri-download-line"></i></p>
+                <p class="dowload__link__jogo">Pokémon Green - USA<i class="ri-download-line"></i></p>
             </a>
 
             <a href="../pages__emuladores/gameboy.html">
