--- a/pages__geracoes/gen1.html
+++ b/pages__geracoes/gen1.html
@@ -61,6 +61,11 @@
 
         <div class="container__rooms">
 
+            <a href="../pages__rooms/pk__red.html"><img src="../images__rooms/pk__red.png" alt=""></a>
+            <a href="../pages__rooms/pk__blue.html"><img src="../images__rooms/pk__blue.png" alt=""></a>
+            <a href="../pages__rooms/pk__green.html"><img src="../images__rooms/pk__green.png" alt=""></a>
+            <a href="../pages__rooms/pk__yellow.html"><img src="../images__rooms/pk__yellow.png" alt=""></a>
+
         </div>
 
     </section>
