--- a/pages__rooms/pk__blue.html
+++ b/pages__rooms/pk__blue.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon Red - PokéROOM's</title>
+    <title>Pokémon Blue - PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__rooms/pk__red.png" alt="Pokémon Red" class="container__jogo__img">
+            <img src="../images__download__rooms/pk__blue.png" alt="Pokémon Red" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
@@ -31,21 +31,28 @@
 
         <div class="container__info__jogo">
             <p class="info__jogo">
-                Pokémon Red é o jogo que deu início à icônica franquia Pokémon. Lançado originalmente para o Game Boy,
-                ele convida os jogadores a explorarem a região de Kanto em uma jornada para se tornarem Mestres Pokémon.
-                Capture e treine mais de 100 criaturas diferentes, enfrente líderes de ginásio, derrote a temida Equipe
-                Rocket e desafie a Elite dos Quatro.
+                Pokémon Blue Version é um clássico absoluto do universo dos videogames, lançado originalmente para o
+                Game Boy pela Nintendo. Este jogo marcou gerações ao apresentar uma aventura envolvente no mundo de
+                Kanto, onde o jogador assume o papel de um jovem treinador Pokémon com o objetivo de capturar, treinar e
+                batalhar com criaturas únicas.
 
-                Com um estilo visual clássico em 8 bits e mecânicas que definiram toda a série, Pokémon Red oferece
-                nostalgia e desafio na medida certa — perfeito para fãs antigos e novos treinadores.
+                Em Pokémon Blue, os jogadores podem capturar até 150 Pokémon diferentes, cada um com habilidades e
+                características próprias. A jornada inclui batalhas épicas contra líderes de ginásio, confrontos com a
+                infame Equipe Rocket e a busca pelo título de Campeão da Liga Pokémon. Além disso, o jogo incentiva a
+                interação social por meio da troca de Pokémon com a versão complementar, Pokémon Red, sendo necessária
+                para completar a Pokédex.
+
+                Com gráficos icônicos de 8 bits, uma trilha sonora nostálgica e mecânicas que estabeleceram as bases
+                para toda a franquia, Pokémon Blue é uma experiência obrigatória tanto para fãs veteranos quanto para
+                novos jogadores que desejam conhecer as origens desta série lendária.
             </p>
 
             <a href="#">
-                <p class="dowload__link__jogo">Pokémon Red - BR<i class="ri-download-line"></i></p>
+                <p class="dowload__link__jogo">Pokémon Blue - BR<i class="ri-download-line"></i></p>
             </a>
 
             <a href="#">
-                <p class="dowload__link__jogo">Pokémon Red - USA<i class="ri-download-line"></i></p>
+                <p class="dowload__link__jogo">Pokémon Blue - USA<i class="ri-download-line"></i></p>
             </a>
 
             <a href="../pages__emuladores/gameboy.html">
