--- a/pages__rooms/pk__yellow.html
+++ b/pages__rooms/pk__yellow.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon Red - PokéROOM's</title>
+    <title>Pokémon Yellow - PokéROOM's</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../images/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__rooms/pk__red.png" alt="Pokémon Red" class="container__jogo__img">
+            <img src="../images__download__rooms/pk__yellow.png" alt="Pokémon Red" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
@@ -31,21 +31,33 @@
 
         <div class="container__info__jogo">
             <p class="info__jogo">
-                Pokémon Red é o jogo que deu início à icônica franquia Pokémon. Lançado originalmente para o Game Boy,
-                ele convida os jogadores a explorarem a região de Kanto em uma jornada para se tornarem Mestres Pokémon.
-                Capture e treine mais de 100 criaturas diferentes, enfrente líderes de ginásio, derrote a temida Equipe
-                Rocket e desafie a Elite dos Quatro.
+                Pokémon Yellow Version, também conhecida como Special Pikachu Edition, é uma versão icônica lançada para
+                o Game Boy, que aprimorou a experiência clássica de Pokémon inspirando-se no sucesso do anime. Lançado
+                originalmente em 1998 no Japão e em 1999 no Ocidente, Pokémon Yellow levou a franquia a um novo patamar
+                ao colocar Pikachu como o Pokémon inicial, fortalecendo ainda mais a conexão entre o jogo e a série de
+                TV.
 
-                Com um estilo visual clássico em 8 bits e mecânicas que definiram toda a série, Pokémon Red oferece
-                nostalgia e desafio na medida certa — perfeito para fãs antigos e novos treinadores.
+                Diferente das versões Red e Blue, em Pokémon Yellow o jogador não escolhe entre Bulbasaur, Charmander ou
+                Squirtle no início — ao invés disso, Pikachu se torna o fiel companheiro, seguindo o protagonista fora
+                da Pokébola durante toda a jornada, uma inovação inédita na época. Além disso, Bulbasaur, Charmander e
+                Squirtle podem ser obtidos ao longo da aventura, permitindo que o jogador reúna o icônico quarteto do
+                anime.
+
+                O jogo oferece gráficos aprimorados, com sprites redesenhados para maior fidelidade visual, além de
+                novos eventos e interações que remetem diretamente à série animada. A presença de personagens como
+                Jessie e James da Equipe Rocket adiciona mais personalidade e narrativa à campanha.
+
+                Assim como nas versões anteriores, o objetivo é capturar e treinar uma equipe poderosa de Pokémon,
+                derrotar os líderes de ginásio, vencer a Elite Four e completar a Pokédex. A conectividade via cabo link
+                permanece essencial para realizar trocas e batalhas com amigos.
             </p>
 
             <a href="#">
-                <p class="dowload__link__jogo">Pokémon Red - BR<i class="ri-download-line"></i></p>
+                <p class="dowload__link__jogo">Pokémon Yellow - BR<i class="ri-download-line"></i></p>
             </a>
 
             <a href="#">
-                <p class="dowload__link__jogo">Pokémon Red - USA<i class="ri-download-line"></i></p>
+                <p class="dowload__link__jogo">Pokémon Yellow - USA<i class="ri-download-line"></i></p>
             </a>
 
             <a href="../pages__emuladores/gameboy.html">
