--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -62,9 +62,9 @@
         <div class="container__rooms">
 
             <a href="../pages__rooms/pk__red.html"><img src="../images__rooms/pk__red.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__blue.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__green.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__yellow.png" alt=""></a>
+            <a href="../pages__rooms/pk__blue.html"><img src="../images__rooms/pk__blue.png" alt=""></a>
+            <a href="../pages__rooms/pk__green.html"><img src="../images__rooms/pk__green.png" alt=""></a>
+            <a href="../pages__rooms/pk__yellow.html"><img src="../images__rooms/pk__yellow.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__gold.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__silver.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__crystal.png" alt=""></a>
