gen 2 finalizada - faltando apenas download

--- a/pages_navegation/ROOM's.html
+++ b/pages_navegation/ROOM's.html
@@ -65,9 +65,9 @@
             <a href="../pages__rooms/pk__blue.html"><img src="../images__rooms/pk__blue.png" alt=""></a>
             <a href="../pages__rooms/pk__green.html"><img src="../images__rooms/pk__green.png" alt=""></a>
             <a href="../pages__rooms/pk__yellow.html"><img src="../images__rooms/pk__yellow.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__gold.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__silver.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__crystal.png" alt=""></a>
+            <a href="../pages__rooms/pk__gold.html"><img src="../images__rooms/pk__gold.png" alt=""></a>
+            <a href="../pages__rooms/pk__silver.html"><img src="../images__rooms/pk__silver.png" alt=""></a>
+            <a href="../pages__rooms/pk__crystal.html"><img src="../images__rooms/pk__crystal.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__ruby.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__sapphire.png" alt=""></a>
             <a href="#"><img src="../images__rooms/pk__firered.png" alt=""></a>
