--- a/pages__geracoes/gen2.html
+++ b/pages__geracoes/gen2.html
@@ -61,6 +61,10 @@
 
         <div class="container__rooms">
 
+            <a href="../pages__rooms/pk__gold.html"><img src="../images__rooms/pk__gold.png" alt=""></a>
+            <a href="../pages__rooms/pk__silver.html"><img src="../images__rooms/pk__silver.png" alt=""></a>
+            <a href="../pages__rooms/pk__crystal.html"><img src="../images__rooms/pk__crystal.png" alt=""></a>
+
         </div>
 
     </section>
