--- a/pages/pages__emuladores/gameboy.html
+++ b/pages/pages__emuladores/gameboy.html
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__emuladores/card GB.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__emuladores/card GB.png" alt="Game Boy" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
@@ -51,10 +51,10 @@
         <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
 
         <div class="jogos__compativeis">
-            <a href="#"><img src="../images__rooms/pk__red.png" alt="Pokémon Red" class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__blue.png" alt="Pokémon Blue" class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__green.png" alt="Pokémon Green" class="img__jogos__compativeis"></a>
-            <a href="#"><img src="../images__rooms/pk__yellow.png" alt="Pokémon Yellow" class="img__jogos__compativeis"></a>
+            <a href="../../pages/pages__rooms/pk__red.html"><img src="../../images/images__rooms/pk__red.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__blue.html"><img src="../../images/images__rooms/pk__blue.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__green.html"><img src="../../images/images__rooms/pk__green.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__yellow.html"><img src="../../images/images__rooms/pk__yellow.png" alt=""></a>
         </div>
 
     </section>
