--- a/pages/pages__emuladores/gameboycolor.html
+++ b/pages/pages__emuladores/gameboycolor.html
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__emuladores/card GBC.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__emuladores/card GBC.png" alt="Game Boy" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy Color</h1> -->
 
@@ -51,9 +51,9 @@
         <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
 
         <div class="jogos__compativeis">
-            <a href="#"><img src="../images__rooms/pk__gold.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__silver.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__crystal.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__gold.html"><img src="../../images/images__rooms/pk__gold.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__silver.html"><img src="../../images/images__rooms/pk__silver.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__crystal.html"><img src="../../images/images__rooms/pk__crystal.png" alt=""></a>
         </div>
 
     </section>
