--- a/pages/pages_navegation/sobre.html
+++ b/pages/pages_navegation/sobre.html
@@ -21,7 +21,7 @@
 
     <main class="main__sobre">
 
-        <img src="../../images/images__main/PokéROOM's_Logo.png" alt="PokéROOM's" class="logo__sobre">
+        <img src="../../images/images__main/logo__sobre.png" alt="PokéROOM's" class="logo__sobre">
 
         <p class="paragrafo__sobre">
             O PokéROOM's é um site com o objetivo de manter vivos os jogos da franquia principal de Pokémon, permitindo
