--- a/pages/pages__emuladores/gameboyadvance.html
+++ b/pages/pages__emuladores/gameboyadvance.html
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__emuladores/card GBA.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__emuladores/card GBA.png" alt="Game Boy" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
@@ -51,11 +51,11 @@
         <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
 
         <div class="jogos__compativeis">
-            <a href="#"><img src="../images__rooms/pk__ruby.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__sapphire.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__firered.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__leafgreen.png" alt=""></a>
-            <a href="#"><img src="../images__rooms/pk__emerald.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__ruby.html"><img src="../../images/images__rooms/pk__ruby.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__sapphire.html"><img src="../../images/images__rooms/pk__sapphire.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__firered.html"><img src="../../images/images__rooms/pk__firered.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__leafgreen.html"><img src="../../images/images__rooms/pk__leafgreen.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__emerald.html"><img src="../../images/images__rooms/pk__emerald.png" alt=""></a>
         </div>
 
     </section>
