--- a/pages/pages__emuladores/nintendods.html
+++ b/pages/pages__emuladores/nintendods.html
@@ -23,7 +23,7 @@
 
         <div class="container__jogo">
 
-            <img src="../images__download__emuladores/card NDS.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__emuladores/card NDS.png" alt="Game Boy" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
