--- a/pages/pages_navegation/ROOM's.html
+++ b/pages/pages_navegation/ROOM's.html
@@ -73,15 +73,15 @@
             <a href="../../pages/pages__rooms/pk__firered.html"><img src="../../images/images__rooms/pk__firered.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__leafgreen.html"><img src="../../images/images__rooms/pk__leafgreen.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__emerald.html"><img src="../../images/images__rooms/pk__emerald.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__diamond.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__pearl.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__platinum.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__heartgold.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__soulsilver.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__black.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__white.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__black2.png" alt=""></a>
-            <a href="#"><img src="../../images/images__rooms/pk__white2.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__diamond.html"><img src="../../images/images__rooms/pk__diamond.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__pearl.html"><img src="../../images/images__rooms/pk__pearl.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__platinum.html"><img src="../../images/images__rooms/pk__platinum.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__heartgold.html"><img src="../../images/images__rooms/pk__heartgold.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__soulsilver.html"><img src="../../images/images__rooms/pk__soulsilver.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__black.html"><img src="../../images/images__rooms/pk__black.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__white.html"><img src="../../images/images__rooms/pk__white.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__black2.html"><img src="../../images/images__rooms/pk__black2.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__white2.html"><img src="../../images/images__rooms/pk__white2.png" alt=""></a>
             <a href="#"><img src="../../images/images__rooms/pk__x.png" alt=""></a>
             <a href="#"><img src="../../images/images__rooms/pk__y.png" alt=""></a>
             <a href="#"><img src="../../images/images__rooms/pk__omegaruby.png" alt=""></a>
