--- a/pages/pages__rooms/pk__soulsilver.html
+++ b/pages/pages__rooms/pk__soulsilver.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nintendo DS - PokéROOM's</title>
+    <title>Pokémon SoulSilver - PokéROOM's</title>
     <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../../images/images__main/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,25 +23,49 @@
 
         <div class="container__jogo">
 
-            <img src="../../images/images__download__emuladores/card NDS.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__rooms/pk__soulsilver.png" alt="Pokémon Diamond"
+                class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Nintendo DS
-                O Nintendo DS foi um console portátil revolucionário da Nintendo, famoso por sua tela dupla (Dual
-                Screen) e jogabilidade inovadora com toque. Com ele, você pode reviver clássicos da era moderna dos
-                jogos Pokémon, como Diamond, Pearl, Black, White e HeartGold. Ideal para quem busca nostalgia com
-                gráficos mais avançados e experiências únicas. Compatível com diversos emuladores e fácil de jogar em
-                diferentes dispositivos!</p>
+            <p class="info__jogo">
+                Lançamento: 2009 (Nintendo DS) | Gênero: RPG | Desenvolvedora: Game Freak
 
-            <a href="https://melonds.kuribo64.net/downloads.php">
-                <p class="dowload__link__jogo">melonDS (descktop)<i class="ri-download-line"></i></p>
+                A Versão Prateada Renascida
+                Pokémon SoulSilver é o remake aprimorado do clássico Pokémon Silver (1999), trazendo a amada região de
+                Johto para a era moderna da Nintendo DS. Considerado por muitos como o melhor remake da franquia, o jogo
+                combina a nostalgia da segunda geração com os avanços tecnológicos da quarta geração.
+
+                Características Principais:
+                ✔ Jornada Dupla: Explore não apenas Johto, mas toda a região de Kanto no pós-jogo
+                ✔ Lugia na Capa: O lendário Pokémon marinho é o foco desta versão
+                ✔ Pokémon Seguidor: Seu Pokémon favorito caminha atrás de você no mundo do jogo
+                ✔ Gráficos Atualizados: Sprites animados e visuais 3D nos combates
+                ✔ Sistema de Batalha da 4ª Geração: Incluindo divisão física/especial de ataques
+
+                Conteúdo Exclusivo:
+                Pokéwalker: Acessório físico que permite levar seu Pokémon para aventuras no mundo real
+
+                Battle Frontier: Área pós-jogo desafiadora trazida de Pokémon Emerald
+
+                Evento do Celebi: Viagem no tempo para enfrentar o Giovanni jovem
+
+                Novas Rotas e Cavernas: Áreas expandidas em relação ao original
+            </p>
+
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon SoulSilver - BR<i class="ri-download-line"></i></p>
             </a>
-            <a href="https://play.google.com/store/search?q=melonDS&c=apps">
-                <p class="dowload__link__jogo">melonDS (mobiel) <i class="ri-download-line"></i></p>
+
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon SoulSilver - USA<i class="ri-download-line"></i></p>
+            </a>
+
+            <a href="../pages__emuladores/nintendods.html">
+                <p class="dowload__link__jogo">Nintendo DS</p>
             </a>
 
         </div>
@@ -50,9 +74,10 @@
 
     <section class="container__jogos__compativeis">
 
-        <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
+        <h2 class="titulo__jogos__compativeis">Jogos da Mesma Geração</h2>
 
         <div class="jogos__compativeis">
+
             <a href="../../pages/pages__rooms/pk__diamond.html"><img src="../../images/images__rooms/pk__diamond.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__pearl.html"><img src="../../images/images__rooms/pk__pearl.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__platinum.html"><img src="../../images/images__rooms/pk__platinum.png" alt=""></a>
@@ -62,6 +87,7 @@
             <a href="../../pages/pages__rooms/pk__white.html"><img src="../../images/images__rooms/pk__white.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__black2.html"><img src="../../images/images__rooms/pk__black2.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__white2.html"><img src="../../images/images__rooms/pk__white2.png" alt=""></a>
+
         </div>
 
     </section>
