--- a/pages/pages__rooms/pk__white.html
+++ b/pages/pages__rooms/pk__white.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nintendo DS - PokéROOM's</title>
+    <title>Pokémon White - PokéROOM's</title>
     <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="../../images/images__main/Pokebola3d favicon PokéROOM's.png" type="image/x=icon">
@@ -23,25 +23,40 @@
 
         <div class="container__jogo">
 
-            <img src="../../images/images__download__emuladores/card NDS.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__rooms/pk__white.png" alt="Pokémon White" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Nintendo DS
-                O Nintendo DS foi um console portátil revolucionário da Nintendo, famoso por sua tela dupla (Dual
-                Screen) e jogabilidade inovadora com toque. Com ele, você pode reviver clássicos da era moderna dos
-                jogos Pokémon, como Diamond, Pearl, Black, White e HeartGold. Ideal para quem busca nostalgia com
-                gráficos mais avançados e experiências únicas. Compatível com diversos emuladores e fácil de jogar em
-                diferentes dispositivos!</p>
+            <p class="info__jogo">
+                Lançamento: 2011 (Nintendo DS) | Desenvolvedora: Game Freak | Publicadora: The Pokémon Company/Nintendo
 
-            <a href="https://melonds.kuribo64.net/downloads.php">
-                <p class="dowload__link__jogo">melonDS (descktop)<i class="ri-download-line"></i></p>
+                A Experiência "White" em Unova
+                Pokémon White oferece uma versão alternativa da revolucionária 5ª geração, apresentando diferenças
+                significativas em relação ao Pokémon Black que vão muito além da simples troca de Pokémon lendários.
+                Esta edição foi projetada para proporcionar uma sensação mais natural e ecológica à região de Unova.
+
+                Destaque Central:
+
+                Zekrom como Pokémon lendário da capa
+
+                White Forest no lugar de Black City (área verdejante cheia de Pokémon raros)
+
+                Ênfase em ambientes naturais e equilíbrio ecológico
+            </p>
+
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon White - BR<i class="ri-download-line"></i></p>
             </a>
-            <a href="https://play.google.com/store/search?q=melonDS&c=apps">
-                <p class="dowload__link__jogo">melonDS (mobiel) <i class="ri-download-line"></i></p>
+
+            <a href="#">
+                <p class="dowload__link__jogo">Pokémon White - USA<i class="ri-download-line"></i></p>
+            </a>
+
+            <a href="../pages__emuladores/nintendods.html">
+                <p class="dowload__link__jogo">Nintendo DS</p>
             </a>
 
         </div>
@@ -50,9 +65,10 @@
 
     <section class="container__jogos__compativeis">
 
-        <h2 class="titulo__jogos__compativeis">Jogos Compatíveis</h2>
+        <h2 class="titulo__jogos__compativeis">Jogos da Mesma Geração</h2>
 
         <div class="jogos__compativeis">
+
             <a href="../../pages/pages__rooms/pk__diamond.html"><img src="../../images/images__rooms/pk__diamond.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__pearl.html"><img src="../../images/images__rooms/pk__pearl.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__platinum.html"><img src="../../images/images__rooms/pk__platinum.png" alt=""></a>
@@ -62,6 +78,7 @@
             <a href="../../pages/pages__rooms/pk__white.html"><img src="../../images/images__rooms/pk__white.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__black2.html"><img src="../../images/images__rooms/pk__black2.png" alt=""></a>
             <a href="../../pages/pages__rooms/pk__white2.html"><img src="../../images/images__rooms/pk__white2.png" alt=""></a>
+
         </div>
 
     </section>
