ajustes pages emuladores

--- a/pages/pages__emuladores/gameboy.html
+++ b/pages/pages__emuladores/gameboy.html
@@ -30,10 +30,12 @@
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Emulador de Game Boy
+            <p class="info__jogo">
+                Emulador de Game Boy
                 Jogue clássicos do Game Boy diretamente do seu computador ou celular! Com este emulador, você pode
                 reviver aventuras icônicas como os jogos da série Pokémon. Rápido, prático e
-                compatível com a maioria dos dispositivos.</p>
+                compatível com a maioria dos dispositivos.
+            </p>
 
             <a href="https://mgba.io">
                 <p class="dowload__link__jogo">mBGA (descktop)<i class="ri-download-line"></i></p>
