--- a/pages/pages__emuladores/nintendo3ds.html
+++ b/pages/pages__emuladores/nintendo3ds.html
@@ -23,14 +23,15 @@
 
         <div class="container__jogo">
 
-            <img src="../../images/images__download__emuladores/ N3DS.png" alt="Game Boy" class="container__jogo__img">
+            <img src="../../images/images__download__emuladores/card N3DS.png" alt="Game Boy" class="container__jogo__img">
 
             <!-- <h1 class="container__jogo__titulo">Game Boy</h1> -->
 
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Nintendo 3DS
+            <p class="info__jogo">
+                Nintendo 3DS
                 O Nintendo 3DS elevou o mundo dos portáteis com gráficos em 3D sem óculos, retrocompatibilidade e uma
                 biblioteca incrível de jogos. Nele, você pode explorar títulos como Pokémon X, Y, Omega Ruby, Alpha
                 Sapphire, Sun e Moon com visuais mais ricos e jogabilidade envolvente. Um console que marcou gerações
