--- a/pages/pages__emuladores/nintendods.html
+++ b/pages/pages__emuladores/nintendods.html
@@ -30,12 +30,14 @@
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Nintendo DS
+            <p class="info__jogo">
+                Nintendo DS
                 O Nintendo DS foi um console portátil revolucionário da Nintendo, famoso por sua tela dupla (Dual
                 Screen) e jogabilidade inovadora com toque. Com ele, você pode reviver clássicos da era moderna dos
                 jogos Pokémon, como Diamond, Pearl, Black, White e HeartGold. Ideal para quem busca nostalgia com
                 gráficos mais avançados e experiências únicas. Compatível com diversos emuladores e fácil de jogar em
-                diferentes dispositivos!</p>
+                diferentes dispositivos!
+            </p>
 
             <a href="https://melonds.kuribo64.net/downloads.php">
                 <p class="dowload__link__jogo">melonDS (descktop)<i class="ri-download-line"></i></p>
