--- a/pages/pages__emuladores/gameboyadvance.html
+++ b/pages/pages__emuladores/gameboyadvance.html
@@ -30,10 +30,12 @@
         </div>
 
         <div class="container__info__jogo">
-            <p class="info__jogo">Emulador de Game Boy Advance
+            <p class="info__jogo">
+                Emulador de Game Boy Advance
                 Jogue clássicos do Game Boy Advance diretamente do seu computador ou celular! Com este emulador, você pode
                 reviver aventuras icônicas como os jogos da série Pokémon. Rápido, prático e
-                compatível com a maioria dos dispositivos.</p>
+                compatível com a maioria dos dispositivos.
+            </p>
 
             <a href="https://mgba.io">
                 <p class="dowload__link__jogo">mBGA (descktop)<i class="ri-download-line"></i></p>
