--- a/pages/pages__geracoes/gen3.html
+++ b/pages/pages__geracoes/gen3.html
@@ -61,7 +61,11 @@
 
         <div class="container__rooms">
 
-            
+            <a href="../../pages/pages__rooms/pk__ruby.html"><img src="../../images/images__rooms/pk__ruby.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__sapphire.html"><img src="../../images/images__rooms/pk__sapphire.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__firered.html"><img src="../../images/images__rooms/pk__firered.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__leafgreen.html"><img src="../../images/images__rooms/pk__leafgreen.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__emerald.html"><img src="../../images/images__rooms/pk__emerald.png" alt=""></a>
 
         </div>
 
