--- a/pages/pages__geracoes/gen4e5.html
+++ b/pages/pages__geracoes/gen4e5.html
@@ -61,7 +61,15 @@
 
         <div class="container__rooms">
 
-            
+            <a href="../../pages/pages__rooms/pk__diamond.html"><img src="../../images/images__rooms/pk__diamond.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__pearl.html"><img src="../../images/images__rooms/pk__pearl.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__platinum.html"><img src="../../images/images__rooms/pk__platinum.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__heartgold.html"><img src="../../images/images__rooms/pk__heartgold.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__soulsilver.html"><img src="../../images/images__rooms/pk__soulsilver.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__black.html"><img src="../../images/images__rooms/pk__black.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__white.html"><img src="../../images/images__rooms/pk__white.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__black2.html"><img src="../../images/images__rooms/pk__black2.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__white2.html"><img src="../../images/images__rooms/pk__white2.png" alt=""></a>
 
         </div>
 
