--- a/pages/pages__geracoes/gen6e7.html
+++ b/pages/pages__geracoes/gen6e7.html
@@ -61,7 +61,12 @@
 
         <div class="container__rooms">
 
-            
+            <a href="../../pages/pages__rooms/pk__x.html"><img src="../../images/images__rooms/pk__x.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__y.html"><img src="../../images/images__rooms/pk__y.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__omegaruby.html"><img src="../../images/images__rooms/pk__omegaruby.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__alphasapphire.html"><img src="../../images/images__rooms/pk__alphasapphira.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__sun.html"><img src="../../images/images__rooms/pk__sun.png" alt=""></a>
+            <a href="../../pages/pages__rooms/pk__moon.html"><img src="../../images/images__rooms/pk__moon.png" alt=""></a>
 
         </div>
 
