ajuste navbar emuladores

--- a/pages/pages_navegation/ROOM's.html
+++ b/pages/pages_navegation/ROOM's.html
@@ -20,40 +20,7 @@
     <div class="collapse bg-dark d-md-none" id="navbarHeader"></div>
 
     <!-- Carossel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <a href="../index.html"><img src="../images__carossel/capa 1 V2.png" class="d-block w-100"
-                        alt="Mantendo a jornada viva!"></a>
-            </div>
-            <div class="carousel-item">
-                <a href="./emuladores.html"><img src="../images__carossel/emuladores carossel.png" class="d-block w-100"
-                        alt="Emuladores"></a>
-            </div>
-            <div class="carousel-item">
-                <a href="./sobre.html"><img src="../images__carossel/jogos carossel mobile.png" class="d-block w-100"
-                        alt="jogos Pokémon"></a>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel"></div>
 
     <section class="rooms">
 
